syntax = "proto3";

import "error_message.proto";
import "forwarded_message.proto";
import "directed_message.proto";

option csharp_namespace = "Luxelot.Messages";

message EnvelopePayload {
    oneof payload {
        ErrorMessage error_message = 1;
        ForwardedMessage forwarded_message = 2;
        DirectedMessage directed_message = 3;
    }
}